--- a/views/cv.html
+++ b/views/cv.html
@@ -46,6 +46,12 @@
 		<div class="body">
 			<h2><img class="indicador" src="../images/indicador.png"><b> &nbsp;FORMACI&Oacute;N COMPLEMENTARIA</b></h2>
 
+				<p><b>Certificado en:</b> Anal&iacute;tica Web</p>
+				<p><b>Dictado por:</b> Fundaci&oacute;n Telef&oacute;nica Movistar - Conecta Empleo.</p>
+				<p><b>Duraci&oacute;n:</b> 30 horas acad&eacute;micas.</p>
+				<p><b>Certificada por:</b> Gerente General de Fundaci&oacute;n Telef&oacute;nica Venezuela. Ana Mar&iacute;a Mancera.</p>
+				<p><b>Realizado el a&ntilde;o:</b> 2022.</p><br><br>
+
 				<p><b>Certificado en:</b> Marketing Digital</p>
 				<p><b>Dictado por:</b> Fundaci&oacute;n Telef&oacute;nica Movistar - Conecta Empleo.</p>
 				<p><b>Duraci&oacute;n:</b> 30 horas acad&eacute;micas.</p>
